Improving names and docs.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@
 # https://setuptools.pypa.io/en/latest/references/keywords.html
 
 [metadata]
-name = alpine
-description = Geometric symbolic learning of physical models
+name = AlpineGP
+description = Symbolic regression of physical models via Genetic Programming.
 author = Alessandro Lucantonio
 author_email = alessandro.lucantonio@gmail.com
 license = MIT
@@ -44,13 +44,6 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     # importlib-metadata; python_version<"3.8"
-    # deap @ git+https://github.com/alucantonio/deap.git
-    # dctkit @ git+https://github.com/alucantonio/dctkit.git
-    # networkx
-    # mpire
-    # scipy
-    # yaml
-    # pygmo
 
 [options.packages.find]
 where = src
