--- a/examples/ex1.yaml
+++ b/examples/ex1.yaml
@@ -8,9 +8,7 @@ gp:
   min_: 2
   max_: 5
   overlapping_generation: True
-  early_stopping: { "enabled": False, "max_overfit": 10 }
-  parsimony_pressure:
-    { "enabled": False, "fitness_first": True, "parsimony_size": 1.5 }
+  validate: False
   penalty: { "method": "length", "reg_param": 0.1 }
   select:
     tournsize: 2
