--- a/tests/poisson1d_2.yaml
+++ b/tests/poisson1d_2.yaml
@@ -10,16 +10,18 @@ gp:
   validate: True
   penalty: { "method": "length", "reg_param": 0.1 }
   select:
-    tournsize: 3
-    stochastic_tournament: { "enabled": True, "prob": [0.7, 0.2, 0.1] }
+    fun: self.tournament_with_elitism
+    kargs: "{'tournsize': 3, 'stochastic_tourn': { 'enabled': True, 'prob': [0.7,
+    0.2, 0.1] }}"
   mutate:
     fun: gp.mutUniform
-    kargs: "{'expr': toolbox.expr_mut, 'pset': self.pset}" # string is important
+    kargs: "{'expr': self.toolbox.expr_mut, 'pset': self.pset}" # string is important
     expr_mut: gp.genFull
     expr_mut_kargs: "{'min_': 1, 'max_': 3}"
   crossover:
     fun: gp.cxOnePoint
     kargs: "{}"
+  immigration: { "enabled": False, "freq": 10, "frac": 0.9 }
   primitives:
     [
       { "name": "AddF", "dimension": None, "rank": None },
