--- a/examples/ex1.yaml
+++ b/examples/ex1.yaml
@@ -11,16 +11,17 @@ gp:
   validate: False
   penalty: { "method": "length", "reg_param": 0.1 }
   select:
-    tournsize: 2
-    stochastic_tournament: { "enabled": False, "prob": [0.7, 0.3] }
+    fun: self.tournament_with_elitism
+    kargs: "{'tournsize': 2, 'stochastic_tourn': { 'enabled': True, 'prob': [0.8, 0.2] }}"
   mutate:
     fun: gp.mixedMutate
-    kargs: "{'expr': toolbox.expr_mut, 'pset': self.pset, 'prob': [0.7, 0.2, 0.1]}" # string is important
+    kargs: "{'expr': self.toolbox.expr_mut, 'pset': self.pset, 'prob': [0.7, 0.2, 0.1]}" # string is important
     expr_mut: gp.genHalfAndHalf
     expr_mut_kargs: "{'min_': 1, 'max_': 3}"
   crossover:
     fun: gp.cxOnePoint
     kargs: "{}"
+  immigration: { "enabled": False, "freq": 10, "frac": 0.9 }
   primitives:
     [
       { "name": "AddF", "dimension": None, "rank": None },
