--- a/examples/ex1.yaml
+++ b/examples/ex1.yaml
@@ -2,6 +2,9 @@
 gp:
   NINDIVIDUALS: 100
   NGEN: 20
+  multi_island:
+    num_islands: 1
+    migration: { "freq": 10, "frac": 0.05 }
   crossover_prob: 0.2
   MUTPB: 0.8
   frac_elitist: 0
