Improved handling of imports for primitives.

--- a/tests/poisson1d_1.yaml
+++ b/tests/poisson1d_1.yaml
@@ -25,8 +25,7 @@ gp:
     kargs: "{}"
   immigration: { "enabled": False, "freq": 10, "frac": 0.9 }
   primitives:
-    imports: ["alpine.gp.cochain_primitives"]
-    collections: ["coch_primitives"]
+    imports: { "alpine.gp.cochain_primitives": ["coch_primitives"] }
     used:
       [
         { "name": "AddF", "dimension": None, "rank": None },
