--- a/tests/poisson1d_2.yaml
+++ b/tests/poisson1d_2.yaml
@@ -26,8 +26,7 @@ gp:
     kargs: "{}"
   immigration: { "enabled": False, "freq": 10, "frac": 0.9 }
   primitives:
-    imports: ["alpine.gp.cochain_primitives"]
-    collections: ["coch_primitives"]
+    imports: { "alpine.gp.cochain_primitives": ["coch_primitives"] }
     used: [
       { "name": "AddF", "dimension": None, "rank": None },
       { "name": "SubF", "dimension": None, "rank": None },
