--- a/tests/poisson1d_2.yaml
+++ b/tests/poisson1d_2.yaml
@@ -13,8 +13,9 @@ gp:
   validate: True
   penalty: { "method": "length", "reg_param": 0.1 }
   select:
-    fun: self.tournament_with_elitism
-    kargs: "{'tournsize': 3, 'stochastic_tourn': { 'enabled': True, 'prob': [0.7,
+    fun: tools.selection.tournament_with_elitism
+    kargs:
+      "{'num_elitist': self.n_elitist, 'tournsize': 3, 'stochastic_tourn': { 'enabled': True, 'prob': [0.7,
       0.2, 0.1] }}"
   mutate:
     fun: gp.mutUniform
@@ -27,16 +28,17 @@ gp:
   immigration: { "enabled": False, "freq": 10, "frac": 0.9 }
   primitives:
     imports: { "alpine.gp.cochain_primitives": ["coch_primitives"] }
-    used: [
-      { "name": "AddF", "dimension": None, "rank": None },
-      { "name": "SubF", "dimension": None, "rank": None },
-      { "name": "MulF", "dimension": None, "rank": None },
-      { "name": "Div", "dimension": None, "rank": None },
-      { "name": "AddC", "dimension": ["0", "1"], "rank": ["SC"] },
-      { "name": "SubC", "dimension": ["0", "1"], "rank": ["SC"] },
-      { "name": "cob", "dimension": ["0", "1"], "rank": ["SC"] },
-      { "name": "del", "dimension": ["1"], "rank": ["SC"] },
-      { "name": "St1", "dimension": ["0", "1"], "rank": ["SC"] },
-      { "name": "MF", "dimension": ["0", "1"], "rank": ["SC"] },
-      { "name": "Inn", "dimension": ["0", "1"], "rank": ["SC"] },
-    ]
+    used:
+      [
+        { "name": "AddF", "dimension": None, "rank": None },
+        { "name": "SubF", "dimension": None, "rank": None },
+        { "name": "MulF", "dimension": None, "rank": None },
+        { "name": "Div", "dimension": None, "rank": None },
+        { "name": "AddC", "dimension": ["0", "1"], "rank": ["SC"] },
+        { "name": "SubC", "dimension": ["0", "1"], "rank": ["SC"] },
+        { "name": "cob", "dimension": ["0", "1"], "rank": ["SC"] },
+        { "name": "del", "dimension": ["1"], "rank": ["SC"] },
+        { "name": "St1", "dimension": ["0", "1"], "rank": ["SC"] },
+        { "name": "MF", "dimension": ["0", "1"], "rank": ["SC"] },
+        { "name": "Inn", "dimension": ["0", "1"], "rank": ["SC"] },
+      ]
