Updated environment file.

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -4,29 +4,29 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - gmsh=4.11.1
+  - gmsh
   - jax
   - jaxopt
-  - numpy=1.24.2
-  - pygmo=2.19.5
-  - python
+  - numpy
+  - pygmo
+  - python<3.11
   - python-gmsh
   - petsc4py
   - jupyterlab
   - trame
   - ipywidgets
-  - scipy=1.10.0
+  - scipy
   - scikit-learn
   - pyvista
   - pygraphviz
   - typeguard
-  - yaml=0.2.5
+  - yaml
   - joblib
   - pip:
-    - sphinx-rtd-theme
-    - myst-parser[linkify]
-    - sphinx>=3.2.1
-    - git+https://github.com/alucantonio/dctkit
-    - git+https://github.com/alucantonio/deap
-    - ray
-    - pygmsh
+      - sphinx-rtd-theme
+      - myst-parser[linkify]
+      - sphinx>=3.2.1
+      - git+https://github.com/alucantonio/dctkit
+      - git+https://github.com/alucantonio/deap
+      - ray
+      - pygmsh
