--- a/environment.yaml
+++ b/environment.yaml
@@ -8,7 +8,7 @@ dependencies:
   - jaxopt
   - numpy
   - pygmo
-  - python<3.11
+  - python
   - python-gmsh
   - petsc4py
   - jupyterlab
@@ -20,7 +20,6 @@ dependencies:
   - typeguard
   - yaml
   - pygraphviz
-  - joblib
   - pip
   - pip:
       - git+https://github.com/cpml-au/dctkit
